# docs/swagger.yaml
@@ -122,4 +122,21 @@ paths:
       summary: Выйти из системы
       tags:
       - auth
+  /upload:
+    post:
+      description: (Еще не реализован!) Загружает файл артефакта и метаданные.
+      responses:
+        "200":
+          description: Файл успешно загружен
+          schema:
+            type: string
+        "500":
+          description: Ошибка сервера
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Загрузить файл
+      tags:
+      - upload
 swagger: "2.0"
